# camp-notify

./: CHANGELOG.md  Example.hs  Main.hs  README.md  camp-notify.cabal  default.nix  hie-bios.sh  hie.yaml  release.nix  shell.nix
backend/: backend.cabal
backend/src/: Backend.hs
frontend/: frontend.cabal
tests/: Spec.hs
