name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , persistent
               , persistent-postgresql
               , persistent-sqlite
               , persistent-template
               , scalpel
               , bytestring
               , aeson
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -threaded
  if impl(ghcjs)
    buildable: False
  extra-libraries: hindent
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
               , persistent
               , persistent-postgresql
               , persistent-sqlite
               , persistent-template
               , scalpel
               , bytestring
               , aeson
               , concurrent-extra
               , time
               , parallel-io
